...
                              style: const TextStyle(
                                  fontSize: 15, fontWeight: FontWeight.w500),
                            ),
                            // SizedBox(height: 20),
                            TextButton(
                              onPressed: () => _selectDate(context),
                              child: const Text('Select Date'),
                            ),
                          ],
                        ),
                      ],
                    ),
                    const SizedBox(
...
                          width: 220,
                          height: 40,
                          child: TextField(
                            controller: serviceNeededController,
                            decoration: const InputDecoration(
                              border: OutlineInputBorder(),
                              labelText: "Service Needed",
                              labelStyle: TextStyle(
                                color: Colors.transparent
                              ),
                              floatingLabelBehavior: FloatingLabelBehavior.never
                            ),
                          ),
...
                          width: 220,
                          height: 40,
                          child: TextField(
                            controller: serviceLocationController,
                            decoration: const InputDecoration(
                              border: OutlineInputBorder(),
                              labelText: "Service Location",
                              labelStyle: TextStyle(
                                color: Colors.transparent
                              ),
                              floatingLabelBehavior: FloatingLabelBehavior.never
                            ),
                          ),
...
                          width: 220,
                          height: 60,
                          child:  TextField(
                            controller: problemDescriptionController,
                            decoration: const InputDecoration(
                              border: OutlineInputBorder(),
                              labelText: "Problem Description",
                              labelStyle: TextStyle(
                                color: Colors.transparent
                              ),
                              floatingLabelBehavior: FloatingLabelBehavior.never
                            ),
                          ),
...
                          onPressed: submitBooking,
                          style: ButtonStyle(
                            backgroundColor:
                                MaterialStateProperty.all<Color>(Theme.of(context).colorScheme.primary),
                          ),
                          child: const Text(
                            "Book",
                            style: TextStyle(color: Colors.white),
                          ),
                        ),
                      ),
                  ],
                ),
...
